<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
	    <ImageView
            android:id="@+id/storeimage"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:src="@drawable/ic_launcher" />
	    <LinearLayout
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical">
		    <AutoCompleteTextView android:id="@+id/storename"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/storename" 
		        android:inputType="textPersonName"/>
		    <AutoCompleteTextView android:id="@+id/storenote"
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/storenote" 
		        android:inputType="textPersonName"/>
	
		</LinearLayout>
    </LinearLayout>
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
    
	    <AutoCompleteTextView android:id="@+id/storeaddress"
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:hint="@string/storeaddress" />

	</LinearLayout>
	
    
    <Button
        android:id="@+id/button_add_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

</LinearLayout>